fix overflow

--- a/src/styles/gradient.css
+++ b/src/styles/gradient.css
@@ -99,6 +99,7 @@ z-index: 2;
     border-radius: 3%;
     position: relative;
     z-index: 1;
+    overflow: hidden;
 }
 
 .scroll{
@@ -183,6 +184,73 @@ background-color: red;
     bottom: -5;
 }
 
+.splat-img2 {
+    /* max-height: 90%; */
+    /* transform: rotate(180deg); */
+    position: absolute;
+    /* width: 95%; */
+    height: 100%;
+    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgb(31, 31, 31)), to(rgba(31, 31, 31, 0)));
+    /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0, 0, 0, 0)); */
+    /* background-image: linear-gradient(45deg, #ffffff, #d0ff00, #ff9d00, #f700ff, #65008d); */
+    /* background-clip: text; */
+    /* opacity: 90%; */
+    /* top: -8%; */
+    /* right: 65%; */
+    /* background-clip: text; */
+    /* -webkit-background-clip: img;
+    color: transparent;
+    font-size: 5rem; */
+    top: -100px;
+    right:0;
+    left: 0;
+    bottom: 0;
+}
+.splat-img3 {
+    /* max-height: 90%; */
+    /* transform: rotate(180deg); */
+    position: absolute;
+    /* width: 95%; */
+    height: 100%;
+    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgb(31, 31, 31)), to(rgba(31, 31, 31, 0)));
+    /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0, 0, 0, 0)); */
+    /* background-image: linear-gradient(45deg, #ffffff, #d0ff00, #ff9d00, #f700ff, #65008d); */
+    /* background-clip: text; */
+    /* opacity: 90%; */
+    /* top: -8%; */
+    /* right: 65%; */
+    /* background-clip: text; */
+    /* -webkit-background-clip: img;
+    color: transparent;
+    font-size: 5rem; */
+    top: -200px;
+    right: -125px;
+    left: 0;
+    bottom: 0;
+}
+.splat-img4 {
+    /* max-height: 90%; */
+    /* transform: rotate(180deg); */
+    position: absolute;
+    /* width: 95%; */
+    height: 100%;
+    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgb(31, 31, 31)), to(rgba(31, 31, 31, 0)));
+    /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0, 0, 0, 0)); */
+    /* background-image: linear-gradient(45deg, #ffffff, #d0ff00, #ff9d00, #f700ff, #65008d); */
+    /* background-clip: text; */
+    /* opacity: 90%; */
+    /* top: -8%; */
+    /* right: 65%; */
+    /* background-clip: text; */
+    /* -webkit-background-clip: img;
+    color: transparent;
+    font-size: 5rem; */
+    top: 0;
+    right: 0;
+    left: -500px;
+    bottom: 0;
+}
+
 .header {
     display: flex;
 }
@@ -194,6 +262,7 @@ background-color: red;
     padding-left: .5em;
     align-self: flex-end;
     padding-bottom: 1em;
+    /* opacity: 55%; */
 }
 
 
